Fix image paths in HTML and clean up icon styles in CSS

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         mayor parte de sus años son herbívoras. Viven en lugares tropicales con
         mucha vegetación y es un animal que puede ser domesticado.
       </p>
-      <img src="/assets/img/iguana-1.jpg" alt="Iguana looking to the side" />
+      <img src="assets/img/iguana-1.jpg" alt="Iguana looking to the side" />
     </main>
     <section class="caracteristicas">
       <h2>CARACTERÍSTICAS</h2>
@@ -50,9 +50,9 @@
       </div>
     </section>
     <figure class="gallery">
-      <img src="/assets/img/iguana-2.jpg" alt="Another Iguana Image" />
-      <img src="/assets/img/iguana-3.jpg" alt="Another Iguana Image" />
-      <img src="/assets/img/iguana-4.jpg" alt="Another Iguana Image" />
+      <img src="assets/img/iguana-2.jpg" alt="Another Iguana Image" />
+      <img src="assets/img/iguana-3.jpg" alt="Another Iguana Image" />
+      <img src="assets/img/iguana-4.jpg" alt="Another Iguana Image" />
     </figure>
     <footer>
       <p>
